<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
   tools:context=".ChartActivity" >

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1Goal"
           android:layout_width="270dp"
             android:layout_height="wrap_content"
            android:src="@drawable/titlebar_new" />

        <ImageButton
            android:id="@+id/btnBackMealAdd2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>


    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Calories"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="@drawable/view">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nutrition Facts"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/TableRow09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView25"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/TotalFat" />

                 

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" 
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView22"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/Cholesterol" />

                    <EditText
                        android:id="@+id/EditText01"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView19"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/TotalCarbs" />

                    <EditText
                        android:id="@+id/EditText02"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView17"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/Sodium" />

                    <EditText
                        android:id="@+id/EditText03"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView14"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/Protein"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/EditText08"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/VitaminA" />

                    <EditText
                        android:id="@+id/EditText05"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/VitaminC" />

                    <EditText
                        android:id="@+id/EditText06"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="35dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/Calcium" />

                    <EditText
                        android:id="@+id/EditText07"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView09"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:layout_weight="1"
                        android:text="@string/Iron" />

                    <EditText
                        android:id="@+id/EditText04"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >


                    <Button
                        android:id="@+id/btnAddOCRMeal"
                           android:layout_width="wrap_content"
              		  android:layout_height="35dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/button1"
                android:text="Add "/>

                </TableRow>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>